unpackaged/main/default/objects/Campaign/fields/Campaign_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Business_Unit__c</fullName>
    <label>Campaign Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>