unpackaged/main/default/objects/Campaign/fields/Campaign_Offer_Language__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Offer_Language__c</fullName>
    <label>Campaign Offer Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English (EN)</fullName>
            </value>
            <value>
                <fullName>English (EN-GB)</fullName>
            </value>
            <value>
                <fullName>English (EN-US)</fullName>
            </value>
            <value>
                <fullName>French (FR)</fullName>
            </value>
            <value>
                <fullName>German (DE)</fullName>
            </value>
            <value>
                <fullName>Italian (IT)</fullName>
            </value>
            <value>
                <fullName>Japanese (JA)</fullName>
            </value>
            <value>
                <fullName>Korean (KO)</fullName>
            </value>
            <value>
                <fullName>Spanish (ES)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spanish (ES - LATAM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>