unpackaged/main/default/objects/Campaign/fields/Campaign_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Offer_Type__c</fullName>
    <label>Campaign Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Communication Opt-In</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Content Bundle</fullName>
            </value>
            <value>
                <fullName>Data Sheet</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Direct Response (Conversation)</fullName>
            </value>
            <value>
                <fullName>eBook</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Follow / Like / Friend</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Infographic</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Product Beta Application</fullName>
            </value>
            <value>
                <fullName>Purchase Promotion</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Slideshow</fullName>
            </value>
            <value>
                <fullName>Support Request</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Sweepstakes</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>