unpackaged/main/default/objects/Campaign/fields/Campaign_Play__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Play__c</fullName>
    <label>Campaign Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetize Content</fullName>
            </value>
            <value>
                <fullName>Engage People</fullName>
            </value>
            <value>
                <fullName>Sell Products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>