unpackaged/main/default/objects/Campaign/fields/Campaign_Segment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Segment__c</fullName>
    <label>Campaign Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Broadcaster</fullName>
            </value>
            <value>
                <fullName>Festivals</fullName>
            </value>
            <value>
                <fullName>Publishers</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>