unpackaged/main/default/objects/Campaign/recordTypes/Marketing_Offer.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Offer</fullName>
    <active>true</active>
    <description>The HOW / WHERE offers are promoted (online marketing, direct email, sponsorship, conferences, etc</description>
    <label>Marketing Offer</label>
</RecordType>