unpackaged/main/default/objects/Campaign/recordTypes/Parent_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Parent_Campaign</fullName>
    <active>true</active>
    <label>Parent Campaign</label>
</RecordType>